# aurus-robotics

./: .gitignore  Cargo.toml  README.md  board.toml  design-doc.md  embed.toml  flash.sh  implementation-plan.md  notes.md
.cargo/: config.toml
aurus/: Cargo.toml
aurus-common/: Cargo.toml
aurus-common/examples/: navigation_integration.rs
aurus-common/src/: lib.rs
aurus-core/: Cargo.toml  build.rs  flash.sh
aurus-core/examples/: blinky.rs  dual-motor-spin.rs  single-motor-spin.rs  single_motor_spin_capabilities.rs  single_motor_spin_gpio.rs  single_motor_spin_pwm.rs
aurus-core/src/: lib.rs  main.rs
aurus-core/src/devices/: motor.rs
aurus-core/src/hal/: mod.rs
aurus-core/src/hal/stm32/: mod.rs
aurus-core/src/motor/: gpio.rs  mod.rs  motor.rs  pwm.rs  traits.rs
aurus-core/src/new/: gpio.rs  mod.rs
aurus-kinematics/: Cargo.toml
aurus-kinematics/examples/: drive_straight.rs
aurus-kinematics/src/: error.rs  lib.rs
aurus-motor/: Cargo.toml  README.md  notes.md
aurus-motor/examples/: hcsr04.rs  single_motor_spin_pwm.rs
aurus-motor/src/: lib.rs
aurus-motor/src/devices/: mod.rs
aurus-motor/src/hardware/: mod.rs
aurus-navigation/: Cargo.toml  README.md
aurus-navigation/examples/: astar.rs  astar_detailed.rs  costmap.rs  costmap_rand.rs  orb_slam3.rs
aurus-navigation/src/: astar.rs  error.rs  frontier_exploration.rs  lib.rs
aurus-navigation/src/map/: costmap.rs  mod.rs  point_types.rs
aurus-navigation/src/slam/: mod.rs
aurus-navigation/src/slam/orb_slam3/: mod.rs
crates/aurus-core/: Cargo.toml
crates/aurus-core/config/: default.toml
crates/aurus-core/src/: blackboard.rs  bus.rs  config.rs  graphics.rs  lib.rs  main.rs  navigation.rs  state.rs  task_manager.rs
crates/aurus-kinematics/: Cargo.toml  README.md
crates/aurus-kinematics/examples/: drive_straight.rs
crates/aurus-kinematics/src/: error.rs  kinematics.rs  lib.rs
crates/aurus-motor/: build.rs  flash.sh
crates/aurus-motor/examples/: single_motor_spin_gpio.rs  single_motor_spin_pwm.rs
crates/aurus-motor/src/devices/: mod.rs  motor.rs
crates/aurus-motor/src/hardware/: gpio.rs  mod.rs
crates/aurus-motor/src/traits/: motor.rs
crates/aurus-navigation/: Cargo.toml  README.md
crates/aurus-navigation/examples/: costmap.rs
crates/aurus-navigation/src/: astar.rs  lib.rs
crates/aurus-navigation/src/map/: costmap.rs  mod.rs
hal_core/: Cargo.toml
hal_core/examples/: simple_sim.rs
hal_core/src/: lib.rs
src/: blackboard.rs  bus.rs  graphics.rs  hardware.rs  main.rs  mod.rs  motion_control.rs  navigation.rs  robot.rs  ros2_interface.rs  state_estimation.rs  stm32.rs
stm32/: Cargo.toml
stm32/src/: lib.rs
