[workspace]
members = [
    ".", # The root package (main application)
    "crates/aurus-kinematics",
    "crates/aurus-navigation",
    "crates/aurus-motor"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# The root package is also a binary crate
[package]
name = "aurus-robotics"
version = "0.1.0"
edition = "2024"

[dependencies]
aurus-kinematics = { path = "crates/aurus-kinematics" }
aurus-navigation = { path = "crates/aurus-navigation" }

anyhow = { workspace = true }
config = { version = "0.14", features = ["toml"] }
macroquad = "0.4.14"
parking_lot = "0.12.3"
spin_sleep = "1.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
