[workspace]
members = [
    "aurus-kinematics",
    "aurus-navigation",
    "aurus-motor"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
config = { version = "0.14", features = ["toml"] }
macroquad = "0.4.14"
parking_lot = "0.12.3"
spin_sleep = "1.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
