[package]
name = "aurus-navigation"
version = "0.1.0"
edition = "2024"

[dependencies]
aurus-common = { path = "../aurus-common" }
aurus-kinematics = { path = "../aurus-kinematics" }

anyhow = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rand = "0.9.1"
opencv = { version = "0.94.4", features = ["clang-runtime"] }
glob = "0.3.2"
nalgebra = "0.33.2"
petgraph = "0.8.1"
ordered-float = "5.0.0"
itertools = "0.14.0"

# Serde for optional serialization/deserialization
[dependencies.serde]
version = "1.0.219"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "nalgebra/serde-serialize"]
