[package]
name = "aurus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.16.0", features = ["v4"] }
async-trait = "0.1.81"
config = { version = "0.14", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
log = "0.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
# Add if needed for tests
