[package]
name = "aurus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
config = { version = "0.14", features = ["toml"] }
macroquad = "0.4.14"
parking_lot = "0.12.3"
spin_sleep = "1.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
