[package]
name = "aurus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
config = { version = "0.14", features = ["toml"] }
macroquad = "0.4.14"
parking_lot = "0.12.3"
spin_sleep = "1.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
