[package]
name = "aurus-kinematics"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
libm = "0.2.15"

# Serde for optional serialization/deserialization
[dependencies.serde]
version = "1.0.219"
features = ["derive"]
optional = true

[features]
default = []
# Enables serde Serialize/Deserialize implementations for library types
serde = ["dep:serde"]
