[package]
name = "aurus-navigation"
version = "0.1.0"
edition = "2024"

[dependencies]
aurus-kinematics = { path = "../aurus-kinematics" }

anyhow = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Serde for optional serialization/deserialization
[dependencies.serde]
version = "1.0.219"
features = ["derive"]
optional = true

[features]
default = []
# Enables serde Serialize/Deserialize implementations for library types
serde = ["dep:serde"]
